--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -26,11 +26,12 @@ jobs:
       - name: Build (dist)
         run: npx vite build
 
-      - name: Upload artifact for Pages
-        # v1이 내부적으로 deprecated된 actions/upload-artifact:v3를 호출할 수 있어 실패 발생
-        # 최신 버전으로 교체해 내부 의존성을 업데이트하도록 시도
-        uses: actions/upload-pages-artifact@v2
+      - name: Upload artifact for Pages (upload-artifact v4 사용)
+        # upload-pages-artifact 액션이 내부적으로 deprecated된 upload-artifact:v3를 참조하여 실패가 발생하므로
+        # 직접 안정된 actions/upload-artifact@v4로 dist를 업로드하여 deploy-pages가 사용할 수 있도록 함
+        uses: actions/upload-artifact@v4
         with:
+          name: pages
           path: ./dist
 
   deploy:
