--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          # Vite requires Node >= 20.19.0 (or >=22.12.0). Use 20.19.0 to match project dependencies.
+          node-version: '20.19.0'
           cache: 'npm'
 
       - name: Install dependencies
