--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "check": "npm ci && npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix && npx prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md,css}\" && (npm audit fix || true) && npx vite build",
     "build": "vite build",
-  "deploy": "if [ -n \"$GH_TOKEN\" ]; then curl -sSf -X POST -H \"Accept: application/vnd.github+json\" -H \"Authorization: token $GH_TOKEN\" https://api.github.com/repos/pargame/MyBlog/actions/workflows/deploy.yml/dispatches -d '{\"ref\":\"main\"}' && echo 'Dispatched deploy.yml'; else echo 'GH_TOKEN not set. Set GH_TOKEN (PAT with workflow/repo scope) to trigger remote deploy.'; fi"
+  "deploy": "if command -v gh >/dev/null 2>&1; then gh workflow run deploy.yml --repo pargame/MyBlog --ref main && echo 'Dispatched deploy.yml via gh'; elif [ -n \"$GH_TOKEN\" ]; then curl -sSf -X POST -H \"Accept: application/vnd.github+json\" -H \"Authorization: token $GH_TOKEN\" https://api.github.com/repos/pargame/MyBlog/actions/workflows/deploy.yml/dispatches -d '{\"ref\":\"main\"}' && echo 'Dispatched deploy.yml via GH_TOKEN'; else echo 'gh CLI not available and GH_TOKEN not set. Install gh or set GH_TOKEN.'; exit 1; fi"
   },
   "dependencies": {
     "react": "^19.1.1",
