--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
     "dev": "vite",
     "check": "npm ci && npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix && npx prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md,css}\" && (npm audit fix || true) && npx vite build",
     "build": "vite build",
-  "deploy": "if command -v gh >/dev/null 2>&1; then gh workflow run deploy.yml --repo pargame/MyBlog --ref main && echo 'Dispatched deploy.yml via gh'; elif [ -n \"$GH_TOKEN\" ]; then curl -sSf -X POST -H \"Accept: application/vnd.github+json\" -H \"Authorization: token $GH_TOKEN\" https://api.github.com/repos/pargame/MyBlog/actions/workflows/deploy.yml/dispatches -d '{\"ref\":\"main\"}' && echo 'Dispatched deploy.yml via GH_TOKEN'; else echo 'gh CLI not available and GH_TOKEN not set. Install gh or set GH_TOKEN.'; exit 1; fi"
+    "deploy": "if command -v gh >/dev/null 2>&1; then gh workflow run deploy.yml --repo pargame/MyBlog --ref main && echo 'Dispatched deploy.yml via gh'; elif [ -n \"$GH_TOKEN\" ]; then curl -sSf -X POST -H \"Accept: application/vnd.github+json\" -H \"Authorization: token $GH_TOKEN\" https://api.github.com/repos/pargame/MyBlog/actions/workflows/deploy.yml/dispatches -d '{\"ref\":\"main\"}' && echo 'Dispatched deploy.yml via GH_TOKEN'; else echo 'gh CLI not available and GH_TOKEN not set. Install gh or set GH_TOKEN.'; exit 1; fi"
   },
   "dependencies": {
+    "marked": "^16.2.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
-  ,"react-router-dom": "^6.14.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
     "@vitejs/plugin-react": "^5.0.2",
-  "eslint": "^9.35.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
-  "prettier": "^3.6.2",
-  "typescript": "5.9.2",
-    "vite": "^7.1.5",
-    "@typescript-eslint/parser": "^8.43.0",
-    "@typescript-eslint/eslint-plugin": "^8.43.0"
-  ,"eslint-config-prettier": "^10.1.8"
+    "prettier": "^3.6.2",
+    "typescript": "5.9.2",
+    "vite": "^7.1.5"
   }
 }
