--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "marked": "^16.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "vis-network": "^10.0.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.12",
