--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "check": "npm ci && npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix && npx prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md,css}\" && (npm audit fix || true) && npx vite build",
     "fetch-pyodide": "node scripts/fetch-pyodide.js",
-    "prepare": "npm run fetch-pyodide",
+    "prepare": "node -e \"if (process.env.FETCH_PYODIDE === '1') { console.log('Fetching pyodide assets (FETCH_PYODIDE=1)'); require('child_process').execSync('node scripts/fetch-pyodide.js', { stdio: 'inherit' }); } else { console.log('Skipping fetch-pyodide (set FETCH_PYODIDE=1 to enable).'); }\"",
     "build": "vite build",
     "deploy": "if command -v gh >/dev/null 2>&1; then gh workflow run deploy.yml --repo pargame/MyBlog --ref main && echo 'Dispatched deploy.yml via gh'; elif [ -n \"$GH_TOKEN\" ]; then curl -sSf -X POST -H \"Accept: application/vnd.github+json\" -H \"Authorization: token $GH_TOKEN\" https://api.github.com/repos/pargame/MyBlog/actions/workflows/deploy.yml/dispatches -d '{\"ref\":\"main\"}' && echo 'Dispatched deploy.yml via GH_TOKEN'; else echo 'gh CLI not available and GH_TOKEN not set. Install gh or set GH_TOKEN.'; exit 1; fi"
   },
