chore: update deps, adjust check script & Vite chunks; add '의도' to DEVELOPMENT.md

--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
   },
   "scripts": {
     "dev": "vite",
-    "check": "npm ci && npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix && npx prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md,css}\" && (npm audit fix || true) && npx vite build",
-    "fetch-pyodide": "node scripts/fetch-pyodide.js",
-    "prepare": "node -e \"if (process.env.FETCH_PYODIDE === '1') { console.log('Fetching pyodide assets (FETCH_PYODIDE=1)'); require('child_process').execSync('node scripts/fetch-pyodide.js', { stdio: 'inherit' }); } else { console.log('Skipping fetch-pyodide (set FETCH_PYODIDE=1 to enable).'); }\"",
+    "lint": "npx eslint \"src/**/*.{ts,tsx,js,jsx}\"",
+    "format": "npx prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md,css}\"",
+  "check": "npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix && npx prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md,css}\" && npm audit --omit dev --audit-level=moderate && npx vite build",
     "build": "vite build",
     "deploy": "if command -v gh >/dev/null 2>&1; then gh workflow run deploy.yml --repo pargame/MyBlog --ref main && echo 'Dispatched deploy.yml via gh'; elif [ -n \"$GH_TOKEN\" ]; then curl -sSf -X POST -H \"Accept: application/vnd.github+json\" -H \"Authorization: token $GH_TOKEN\" https://api.github.com/repos/pargame/MyBlog/actions/workflows/deploy.yml/dispatches -d '{\"ref\":\"main\"}' && echo 'Dispatched deploy.yml via GH_TOKEN'; else echo 'gh CLI not available and GH_TOKEN not set. Install gh or set GH_TOKEN.'; exit 1; fi"
   },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "npx eslint --fix",
+      "npx prettier --write"
+    ]
+  },
+  "engines": {
+  "node": ">=22.19.0"
+  },
   "dependencies": {
     "marked": "^16.2.1",
-    "@codemirror/lang-python": "6.2.1",
-    "@uiw/react-codemirror": "4.25.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
