--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
+      - name: Build (run checks + build)
+        run: npm run check
 
       - name: Upload Pages artifact
         # upgraded to v4 (latest) to use updated artifact internals
