--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Use Node.js
+      - name: Use Node.js (LTS)
         uses: actions/setup-node@v5
         with:
-          node-version: '20.19.0'
+          node-version: 'lts/*'
           cache: 'npm'
 
       - name: Install dependencies
