--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "check": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix && prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md,css}\" && npm audit --omit dev --audit-level=moderate && vite build",
+  "check": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix && prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md,css}\" && npm audit --omit dev --audit-level=moderate && vite build && cp -R public/* dist/",
     "deploy": "if command -v gh >/dev/null 2>&1; then gh workflow run deploy.yml --repo pargame/MyBlog --ref main && echo 'Dispatched deploy.yml via gh'; elif [ -n \"$GH_TOKEN\" ]; then curl -sSf -X POST -H \"Accept: application/vnd.github+json\" -H \"Authorization: token $GH_TOKEN\" https://api.github.com/repos/pargame/MyBlog/actions/workflows/deploy.yml/dispatches -d '{\"ref\":\"main\"}' && echo 'Dispatched deploy.yml via GH_TOKEN'; else echo 'gh CLI not available and GH_TOKEN not set. Install gh or set GH_TOKEN.'; exit 1; fi"
   },
   "lint-staged": {
